fix: overflow filmes em destaque

--- a/style.css
+++ b/style.css
@@ -157,6 +157,7 @@ body {
 	display: flex;
 	justify-content: space-between;
 	overflow-x: scroll;
+	overflow-y: hidden;
 	margin: 20px 0px;
 }
 
